--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,9 @@
     --color-skin-link: rgb(224, 241, 255);
     --color-skin-separator: rgb(38, 38, 38);
     --color-skin-elevated-separator: rgb(255, 255, 255);
+    --color-scrollbar-track: #333;
+    --color-scrollbar-thumb: #888;
+    --color-scrollbar-thumb-hover: #e0e0e0;
   }
 
   .dark {
@@ -41,6 +44,9 @@
     --color-skin-link: rgb(224, 241, 255);
     --color-skin-separator: rgb(38, 38, 38);
     --color-skin-elevated-separator: rgb(54, 54, 54);
+    --color-scrollbar-track: #333;
+    --color-scrollbar-thumb: #888;
+    --color-scrollbar-thumb-hover: #e0e0e0;
   }
 }
 
@@ -52,4 +58,24 @@ body {
 
 button {
   cursor: pointer;
+}
+
+/* styles.css or global.css */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 16px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: var(--color-scrollbar-track);
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar-thumb);
+  border: 3px solid transparent;
+  border-radius: 10px;
+  background-clip: content-box;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-scrollbar-thumb-hover);
+  border: 3px solid transparent;
+  border-radius: 10px;
+  background-clip: content-box;
 }
